[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui_design/main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui_design/main_menu/assets/background.png" type="Texture" id=2]
[ext_resource path="res://ui_design/main_menu/assets/capsule_small-export-export.png" type="Texture" id=3]
[ext_resource path="res://helpers/source_code_pro_explanations.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui_design/audio_menu/audio_menu.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0271
margin_top = -50.9029
margin_right = 96.9729
margin_bottom = -27.9029
texture = ExtResource( 3 )
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
custom_constants/margin_right = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 80.0
margin_right = 170.0
margin_bottom = 74.0

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 90.0
margin_bottom = 74.0
size_flags_vertical = 3
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/MenuOptions"]
margin_right = 90.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 4 )
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/MenuOptions"]
margin_top = 26.0
margin_right = 90.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 4 )
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/MenuOptions"]
margin_top = 52.0
margin_right = 90.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"

[node name="audio_menu" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
visible = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuOptions/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuOptions/Exit" to="." method="_on_Exit_pressed"]

[editable path="audio_menu"]
